--- a/css/normalize.css
+++ b/css/normalize.css
@@ -11,12 +11,17 @@ html {
   /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
+  overflow: hidden;
+  height: 100%;
 }
 /**
  * Remove default margin.
  */
 body {
   margin: 0;
+  overflow: auto;
+  height: 100%;
+  overscroll-behavior: none;
 }
 /* HTML5 display definitions
    ========================================================================== */
